<resources>
    <string name="app_name">CheckAttendanceBLE</string>
    <string name="auth">Авторизація</string>
    <string name="register">Реєстрація</string>
    <string name="log_in">Увійти</string>
    <string name="sign_in">Зареєструватися</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="password_repeat">Repeat password</string>
    <string name="username">ПІП</string>
    <string name="student">Студент</string>
    <string name="teacher">Викладач</string>
    <string name="power_on">I\'m here!</string>
    <string name="power_off">I\'m leave :)</string>
    <string name="title_activity_beacon">BeaconActivity</string>
    <string name="title_activity_user">UserActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_senpai">SenpaiActivity</string>
    <string name="textpupil">TextPupil</string>
</resources>
