<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".AuthorizationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="65dp">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="144dp"
            android:layout_marginTop="50sp"
            android:contentDescription="TODO"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/textLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:text="@string/auth"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40sp"
            android:layout_marginRight="40sp"
            android:layout_marginTop="20sp"
            android:background="@drawable/fields"
            android:ems="10"
            android:hint="@string/login"
            android:inputType="textEmailAddress"
            android:padding="10sp"
            android:textColor="@color/colorAccent" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20sp"
            android:layout_marginLeft="40sp"
            android:layout_marginRight="40sp"
            android:layout_marginTop="20sp"
            android:background="@drawable/fields"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10sp"
            android:textColor="@color/colorAccent" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="120sp"
            android:layout_marginRight="120sp"
            android:background="@drawable/buttons"
            android:fontFamily="monospace"
            android:text="@string/log_in"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>